Fix wrong background link, add more space at the bottom of listjob page - MinhTHD

--- a/web-ui/web-v0.7.1/css/listjob.css
+++ b/web-ui/web-v0.7.1/css/listjob.css
@@ -8,12 +8,14 @@ body {
     border-radius: 20px 20px 20px 20px;
     height: calc(100vh - 200px);
     top: 10px;
+    margin-bottom: 50px;
     /* min-height: 800px;  */
     height: 80%;
     padding-left:2%;
     padding-right:2%;
     padding-top:1%;
     padding-bottom:1%;
+    
     
 }
 
