--- a/web-ui/web-v0.7.1/css/style.css
+++ b/web-ui/web-v0.7.1/css/style.css
@@ -15,7 +15,7 @@ html {
 
 #homebody {
   /* background: url("../images/background-ctsa.png") fixed no-repeat center; */
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237105/demo-image/orange-banner.jpg") fixed no-repeat center;
+  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237103/demo-image/orange-background.jpg") fixed no-repeat center;
   background-size: 100% 100%;
 }
 
